# cpp-cmake-example

./: .gitignore  README.md
cpm/: CMakeLists.txt  README.md
fetch_content/: .gitignore  CMakeLists.txt  README.md
find_library/: CMakeLists.txt  README.md
find_package/: CMakeLists.txt  README.md  main.cpp
fmt-sample/: CMakeLists.txt  README.md  main.cpp
gtest-sample/: CMakeLists.txt  README.md
gtest-sample/src/: CMakeLists.txt  add.cpp  add.h
gtest-sample/test/: CMakeLists.txt  main.cpp  test.cpp
includes_full_code/: CMakeLists.txt  main.cpp
multi_cmakelists/: CMakeLists.txt  main.cpp
multi_cmakelists/jsoncpp/: CMakeLists.txt
subdirectory/: CMakeLists.txt  README.md
subdirectory/project1/: CMakeLists.txt  project1.cpp
subdirectory/project1/include/: project1.h
subdirectory/project2/: CMakeLists.txt  project2.cpp
subdirectory/project2/include/: project2.h
subdirectory/project3/: CMakeLists.txt  project3.cpp
subdirectory/project3/include/: project3.h
subdirectory/test/: CMakeLists.txt  main.cpp
xlog/: README.md  settings.gradle
xlog/app/: build.gradle
xlog/app/src/androidTest/java/com/taoweiji/xlogexample/: ExampleInstrumentedTest.java
xlog/app/src/main/: AndroidManifest.xml
xlog/app/src/main/java/com/taoweiji/xlogexample/: MainActivity.java
xlog/app/src/main/res/values/: strings.xml  themes.xml
xlog/app/src/main/res/values-night/: themes.xml
xlog/app/src/test/java/com/taoweiji/xlogexample/: ExampleUnitTest.java
xlog/gradle/wrapper/: gradle-wrapper.properties
xlog/nativelib/: .gitignore  build.gradle
xlog/nativelib/src/main/: AndroidManifest.xml
xlog/nativelib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
(+1 files in other folders)
